<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.ecocode</groupId>
    <artifactId>ecocode-parent</artifactId>
    <version>1.2.2-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>ecoCode Sonar Plugins Project</name>
    <description>Provides rules to reduce the environmental footprint of your programs</description>
    <url>https://github.com/green-code-initiative/ecocode</url>
    <organization>
        <name>green-code-initiative</name>
        <url>https://github.com/green-code-initiative</url>
    </organization>
    <licenses>
        <license>
            <name>GPL v3</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>python-plugin</module>
        <module>java-plugin</module>
        <module>javascript-plugin</module>
        <module>php-plugin</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/green-code-initiative/ecocode</connection>
        <developerConnection>scm:git:https://github.com/green-code-initiative/ecocode</developerConnection>
        <url>https://github.com/green-code-initiative/ecocode</url>
        <tag>HEAD</tag>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/green-code-initiative/ecocode/issues</url>
    </issueManagement>

    <properties>

        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <encoding>UTF-8</encoding>
        <project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${encoding}</project.reporting.outputEncoding>

        <sonar.organization>green-code-initiative</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>

        <sonarqube.version>9.4.0.54424</sonarqube.version>
        <sonarjava.version>7.19.0.31550</sonarjava.version>
        <sonarpython.version>4.3.0.11660</sonarpython.version>
        <sonarphp.version>3.29.0.9684</sonarphp.version>
        <sonarjavascript.version>10.2.0.21568</sonarjavascript.version>

        <sonar-analyzer-commons.version>2.5.0.1358</sonar-analyzer-commons.version>

        <sonar-packaging.version>1.21.0.505</sonar-packaging.version>
        <sonar.skipDependenciesPackaging>true</sonar.skipDependenciesPackaging>

        <junit.jupiter.version>5.9.1</junit.jupiter.version>
        <assertJ.version>3.23.1</assertJ.version>
        <mockito.version>5.3.1</mockito.version>

        <google.re2j>1.7</google.re2j>

    </properties>

    <dependencyManagement>
        <dependencies>

            <!-- MAIN sources dependencies -->
            <dependency>
                <groupId>org.sonarsource.sonarqube</groupId>
                <artifactId>sonar-plugin-api</artifactId>
                <version>${sonarqube.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.sonarsource.analyzer-commons</groupId>
                <artifactId>sonar-analyzer-commons</artifactId>
                <version>${sonar-analyzer-commons.version}</version>
            </dependency>

            <!-- for security on regex patterns : https://github.com/google/re2j -->
            <dependency>
                <groupId>com.google.re2j</groupId>
                <artifactId>re2j</artifactId>
                <version>${google.re2j}</version>
            </dependency>

            <!-- JAVA -->
            <dependency>
                <groupId>org.sonarsource.java</groupId>
                <artifactId>sonar-java-plugin</artifactId>
                <version>${sonarjava.version}</version>
                <type>sonar-plugin</type>
                <scope>provided</scope>
            </dependency>

            <!-- JavaScript -->
            <dependency>
                <groupId>org.sonarsource.javascript</groupId>
                <artifactId>sonar-javascript-plugin</artifactId>
                <version>${sonarjavascript.version}</version>
                <type>sonar-plugin</type>
                <scope>provided</scope>
            </dependency>

            <!-- PHP -->
            <dependency>
                <groupId>org.sonarsource.php</groupId>
                <artifactId>sonar-php-plugin</artifactId>
                <version>${sonarphp.version}</version>
                <type>sonar-plugin</type>
                <scope>provided</scope>
            </dependency>

            <!-- PYTHON -->
            <dependency>
                <groupId>org.sonarsource.python</groupId>
                <artifactId>sonar-python-plugin</artifactId>
                <version>${sonarpython.version}</version>
                <type>sonar-plugin</type>
                <scope>provided</scope>
            </dependency>

            <!-- TEST sources dependencies -->
            <dependency>
                <groupId>org.sonarsource.java</groupId>
                <artifactId>java-checks-testkit</artifactId>
                <version>${sonarjava.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertJ.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.sonarsource.python</groupId>
                <artifactId>python-checks-testkit</artifactId>
                <version>${sonarpython.version}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.sonar-packaging-maven-plugin</groupId>
                    <artifactId>sonar-packaging-maven-plugin</artifactId>
                    <version>${sonar-packaging.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-shade-plugin</artifactId>
                    <version>3.5.0</version>
                    <!-- common configuration for shade plugin -->
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>shade</goal>
                            </goals>
                            <configuration>
                                <filters>
                                    <filter>
                                        <artifact>commons-*:*</artifact>
                                        <excludes>
                                            <exclude>META-INF/**</exclude>
                                        </excludes>
                                    </filter>
                                    <filter>
                                        <artifact>org.*:*</artifact>
                                        <excludes>
                                            <exclude>META-INF/**</exclude>
                                            <exclude>org/sonar/api/batch/sensor/**</exclude>
                                            <exclude>javax/annotation/**</exclude>
                                        </excludes>
                                    </filter>
                                    <filter>
                                        <artifact>com.*:*</artifact>
                                        <excludes>
                                            <exclude>META-INF/**</exclude>
                                        </excludes>
                                    </filter>
                                    <filter>
                                        <artifact>junit:*</artifact>
                                        <excludes>
                                            <exclude>META-INF/**</exclude>
                                        </excludes>
                                    </filter>
                                </filters>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.10</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
